# evoting

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.kiro/: RESUMEN_SKILLS_CONFIGURADAS.md  RESUMEN_STEERING_COMPLETO.md  agents_catalog.md.md  api_documentation.md  coding_standards.md  design.md  development_guide.md  environment_setup.md  project_config.md  project_structure.md  python_testing_guide.md  steering.md  (+2 more)
apps/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_core_schema.py  0002_auth_schema.py  0003_admin_mfa_credentials.py  0004_member_registry_fields.py  0005_eligibility_reason.py  0006_election_activation.py  0007_election_tallies.py  0008_production_hardening.py  0009_territorial_hierarchy.py  0010_organization_geojson.py  0011_member_title.py  0012_election_broadcasts.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/v1/: voter_router.py
apps/backend/app/api/v1/admin/: broadcast_router.py  router.py  territory_router.py
apps/backend/app/api/v1/auth/: __init__.py  router.py  schemas.py
apps/backend/app/api/v1/public/: __init__.py  router.py
apps/backend/app/auth/: __init__.py  dependencies.py  passwords.py  realms.py  tokens.py  totp.py
apps/backend/app/core/: config.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/middleware/: logging.py
apps/backend/app/models/: __init__.py  auth.py  core.py
apps/backend/app/repositories/: admin_users.py  elections.py
apps/backend/app/services/: audit.py  ballot_crypto.py  csrf.py  geo_features.py  mailtrap_email.py  member_spreadsheet.py  rate_limit.py  tally_acta.py  tally_artifact.py  youtube.py
apps/backend/scripts/: __init__.py  evoting_verify.py  generate_election_keys.py  generate_tally_acta.py  inspect_database.py  seed_admin.py  tally_encrypted_ballots.py
apps/backend/tests/: test_auth_contract.py  test_crypto_and_audit.py
(+93 files in other folders)
