[project]
name = "evoting-backend"
version = "0.1.0"
description = "Privacy-preserving eVoting API"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.14.1",
  "asyncpg==0.30.0",
  "fastapi==0.115.6",
  "pydantic-settings==2.7.1",
  "sqlalchemy[asyncio]==2.0.37",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "mypy==1.14.1",
  "ruff==0.9.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
