[project]
name = "evoting-backend"
version = "0.2.0"
description = "Privacy-preserving eVoting API"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.14.1",
  "asyncpg==0.30.0",
  "cryptography==49.0.0",
  "openpyxl==3.1.5",
  "pillow==11.1.0",
  "python-multipart==0.0.20",
  "fastapi==0.115.6",
  "mailtrap==2.6.1",
  "python-jose[cryptography]==3.3.0",
  "pydantic-settings==2.7.1",
  "sqlalchemy[asyncio]==2.0.37",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "mypy==1.14.1",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.3",
  "httpx==0.28.1",
  "ruff==0.9.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
